--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
+    "react-bootstrap": "^1.3.0",
+    "react-delay-render": "^0.1.2",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-fade-in": "^1.1.0",
+    "react-responsive": "^8.1.0",
+    "react-reveal": "^1.2.2",
+    "react-scripts": "3.4.3",
+    "typewriter-effect": "^2.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
